--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-toast": "^1.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.15.0",
     "input-otp": "^1.2.5",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
@@ -30,6 +31,7 @@
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.1",
     "recharts": "^2.13.3",
+    "swiper": "^11.1.15",
     "tailwind-merge": "^2.5.4",
     "use-debounce": "^10.0.4",
     "zod": "^3.23.8"
